--- a/SFAP/SFAP-html/css/style.css
+++ b/SFAP/SFAP-html/css/style.css
@@ -263,6 +263,164 @@ td {
   background-color: #EFFFFE;
 }
 
+.txn-input-select {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  vertical-align: middle;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.txn-input-select::after {
+  top: 13px;
+  right: 7px;
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  display: block;
+  background: url(../images/icon/sort-down.svg) center center no-repeat;
+  background-size: contain;
+  pointer-events: none;
+}
+
+.txn-input-select select {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  height: 38px;
+  line-height: 38px;
+  font-size: 16px;
+  width: 100%;
+  background-color: transparent;
+  text-align: left;
+  padding: 0 10px;
+}
+
+.txn-input-select select::-ms-expand {
+  display: none;
+}
+
+.txn-input-select .checkbox-shows {
+  padding: 10px;
+  min-height: 38px;
+  font-size: 16px;
+  width: 100%;
+}
+
+.txn-input-select .checkbox-shows ul.checkbox-list {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.txn-input-select .checkbox-shows ul.checkbox-list li {
+  position: relative;
+  border: 1px solid #007B81;
+  padding: 6px 25px 6px 10px;
+  border-radius: 6px;
+  margin: 2.5px 6px 2.5px 0;
+}
+
+.txn-input-select .checkbox-shows ul.checkbox-list li span {
+  position: absolute;
+  right: 0;
+}
+
+.txn-input-select .checkbox-group {
+  position: absolute;
+  top: 40px;
+  border-radius: 6px;
+  background-color: #fff;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  -webkit-box-shadow: 0 3px 5px #00000015;
+          box-shadow: 0 3px 5px #00000015;
+  width: 100%;
+  max-height: 244px;
+  overflow-y: auto;
+  z-index: 1;
+}
+
+.txn-input-select .checkbox-group .control {
+  padding: 12px 10px;
+  display: block;
+  position: relative;
+  padding-left: 40px;
+  font-size: 16px;
+  color: #6F6F6F;
+  border-bottom: 1px solid #E1E1E1;
+  cursor: pointer;
+}
+
+.txn-input-select .checkbox-group .control input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.txn-input-select .checkbox-group .control input:disabled ~ .control__indicator {
+  background: #e6e6e6;
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.txn-input-select .checkbox-group .control input:checked ~ .control__indicator {
+  background: #4EB5A5;
+  border-color: #4EB5A5;
+}
+
+.txn-input-select .checkbox-group .control input:checked ~ .control__indicator:after {
+  display: block;
+}
+
+.txn-input-select .checkbox-group .control__indicator {
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  height: 20px;
+  width: 20px;
+  border-radius: 4px;
+  border: 2px solid #A2A2A2;
+}
+
+.txn-input-select .checkbox-group .control__indicator::after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.txn-input-select .checkbox-group .control--checkbox .control__indicator:after {
+  left: 5px;
+  top: 0px;
+  width: 6px;
+  height: 10px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.txn-textare {
+  width: 100%;
+}
+
+.txn-textare textarea {
+  width: 100%;
+  padding: 10px;
+  min-height: 80px;
+  background-color: #fff !important;
+  border-radius: 4px;
+  border: 1px solid #E1E1E1;
+}
+
 .main-container {
   padding: 15px;
   background-color: #f6f7f9;
@@ -381,12 +539,6 @@ td {
   border: none;
 }
 
-.form_row .rowCont .a_field .txn-input textarea,
-.form_row .rowCont .a_field .date-select textarea {
-  min-height: 80px;
-  padding: 10px;
-}
-
 .form_row .rowCont .a_field .txn-input .date-picker,
 .form_row .rowCont .a_field .date-select .date-picker {
   position: relative;
@@ -396,45 +548,9 @@ td {
 }
 
 .form_row .rowCont .a_field .txn-input-select {
-  -webkit-box-flex: calc(100% - 150px);
-      -ms-flex: calc(100% - 150px);
-          flex: calc(100% - 150px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  vertical-align: middle;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-}
-
-.form_row .rowCont .a_field .txn-input-select::after {
-  top: 13px;
-  right: 7px;
-  content: "";
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  display: block;
-  background: url(../images/icon/sort-down.svg) center center no-repeat;
-  background-size: contain;
-  pointer-events: none;
-}
-
-.form_row .rowCont .a_field .txn-input-select select {
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  height: 38px;
-  line-height: 38px;
-  font-size: 16px;
-  width: 100%;
-  background-color: transparent;
-}
-
-.form_row .rowCont .a_field .txn-input-select select::-ms-expand {
-  display: none;
 }
 
 .form_row .rowCont .a_field .box {
@@ -484,13 +600,39 @@ td {
   text-align: right;
 }
 
+.form_row .rowCont .a_field .btn-ss-line {
+  color: #4EB5A5;
+  border-radius: 6px;
+  margin: 0 5px;
+  font-size: 15px;
+  padding: 4px 10px;
+  background-color: #EFFFFE;
+  border: #C9EBE9 solid 1px;
+}
+
+.form_row .rowCont .a_field .f-ss-note {
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: bold;
+  padding-left: 5px;
+}
+
+.form_row .rowCont .a_field .f-ss-note span {
+  color: #007B81;
+}
+
 .form_row .rowCont .top-line {
   border-top: 1px solid #e1e1e1;
 }
 
 .form_row .rowCont .bg-gary {
   background-color: #e1e4e7;
-  border-radius: 10px;
+  border-radius: 6px;
+}
+
+.form_row .rowCont .bg-gary input {
+  padding: 0 10px;
+  color: #959595;
 }
 
 .form_row .rowCont .both-d .txn-input-select,
@@ -765,6 +907,19 @@ div.date-picker-dash {
   text-align: center;
   padding: 20px 0 10px 0;
   margin: 0 auto;
+}
+
+.c-popup-modal .qabox {
+  margin: 5px 0 10px 0;
+  padding: 10px;
+  border-radius: 6px;
+}
+
+.c-popup-modal .qabox .txn-input-select {
+  font-size: 14px;
+  background-color: #fff;
+  margin-bottom: 5px;
+  border-radius: 6px;
 }
 
 .ctbc-table-container {
@@ -1059,6 +1214,16 @@ div.date-picker-dash {
   background-image: url(../images/icon/trash.svg);
 }
 
+.glyphicon-none {
+  cursor: not-allowed;
+  opacity: .6;
+  -webkit-filter: grayscale(1);
+}
+
+.glyphicon-none:hover {
+  opacity: .6;
+}
+
 .h_loader {
   width: 100%;
   height: 100vh;
@@ -1200,13 +1365,6 @@ div.date-picker-dash {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-}
-
-.question-box .r_reply_box .txn-textare textarea {
-  background-color: #fff !important;
-  border-radius: 4px;
-  border: 1px solid #E1E1E1;
 }
 
 .question-box .form_row {
@@ -1239,117 +1397,13 @@ div.date-picker-dash {
   right: 20px;
 }
 
-.question-box .rowCont .a_field .txn-input-select select {
-  text-align: left;
-  padding: 0 10px;
+.question-box .rowCont .a_field .has-list {
+  max-width: 100%;
+  padding-right: 40px;
 }
 
-.question-box .rowCont .a_field .txn-input-select .checkbox-shows {
-  padding: 10px;
-  min-height: 38px;
-  font-size: 16px;
-  width: 100%;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-shows ul.checkbox-list {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-shows ul.checkbox-list li {
-  position: relative;
-  border: 1px solid #007B81;
-  padding: 6px 25px 6px 10px;
-  border-radius: 6px;
-  margin: 2.5px 6px 2.5px 0;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-shows ul.checkbox-list li span {
-  position: absolute;
-  right: 0;
-}
-
-.question-box .rowCont .a_field .txn-input-select .has-list {
+.question-box .rowCont .a_field .has-list .checkbox-shows {
   padding: 2.5px 10px;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group {
-  position: absolute;
-  top: 40px;
-  border-radius: 6px;
-  background-color: #fff;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  -webkit-box-shadow: 0 3px 5px #00000015;
-          box-shadow: 0 3px 5px #00000015;
-  width: 100%;
-  max-height: 244px;
-  overflow-y: auto;
-  z-index: 1;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control {
-  padding: 12px 10px;
-  display: block;
-  position: relative;
-  padding-left: 40px;
-  font-size: 16px;
-  color: #6F6F6F;
-  border-bottom: 1px solid #E1E1E1;
-  cursor: pointer;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control input:disabled ~ .control__indicator {
-  background: #e6e6e6;
-  opacity: 0.6;
-  pointer-events: none;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control input:checked ~ .control__indicator {
-  background: #4EB5A5;
-  border-color: #4EB5A5;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control input:checked ~ .control__indicator:after {
-  display: block;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control__indicator {
-  position: absolute;
-  top: 10px;
-  left: 12px;
-  height: 20px;
-  width: 20px;
-  border-radius: 4px;
-  border: 2px solid #A2A2A2;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control__indicator::after {
-  content: '';
-  position: absolute;
-  display: none;
-}
-
-.question-box .rowCont .a_field .txn-input-select .checkbox-group .control--checkbox .control__indicator:after {
-  left: 5px;
-  top: 0px;
-  width: 6px;
-  height: 10px;
-  border: solid #fff;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
 }
 
 .question-box .rowCont .not-yete .txn-input {
@@ -1363,5 +1417,56 @@ div.date-picker-dash {
   color: #6F6F6F;
   font-weight: bold;
   font-size: 15px;
+}
+
+.info-card {
+  width: 100%;
+  padding: 10px 0;
+}
+
+.info-card .main-category {
+  width: 100%;
+  padding: 5px 0;
+}
+
+.info-card .main-category h4.top-title {
+  color: #007B81;
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.info-card .subtitle-category {
+  padding: 10px 0;
+}
+
+.info-card .subtitle-category p {
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: bold;
+  color: #333333;
+}
+
+.info-card .classification {
+  border: 1px solid #E1E4E7;
+  position: relative;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+}
+
+.info-card .classification::before {
+  content: "";
+  position: absolute;
+  background-color: #4EB5A5;
+  width: 5px;
+  left: -1px;
+  height: 100%;
+  top: 0;
+}
+
+.info-card .classification p {
+  font-size: 16px;
+  font-weight: bold;
+  color: #848484;
 }
 /*# sourceMappingURL=style.css.map */
