--- a/SFAP/SFAP-html/css/style.scss
+++ b/SFAP/SFAP-html/css/style.scss
@@ -93,6 +93,106 @@ td{
     background-color: #EFFFFE;
   }
 }
+
+.control {
+  padding: 12px 10px;
+  min-width: 70px;
+  display: block;
+  position: relative;
+  padding-left: 28px;
+  font-size: 16px;
+  color: #555555;
+  cursor: pointer;
+
+  input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+
+    &:disabled~.control__indicator {
+      background: #e6e6e6;
+      opacity: 0.6;
+      -webkit-filter: grayscale(1);
+      pointer-events: none;
+      input{
+        cursor: not-allowed;
+      }
+    }
+
+    &:checked~.control__indicator {
+      background: #4EB5A5;
+      border-color: #4EB5A5;
+
+      &:after {
+        display: block;
+      }
+    }
+    
+  }
+  // input[radio]{
+
+  // }
+}
+
+.control__indicator {
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  height: 20px;
+  width: 20px;
+  border-radius: 4px;
+  border: 2px solid #cfcfcf;
+  background-color: #fff;
+
+  &::after {
+    content: '';
+    position: absolute;
+    display: none;
+  }
+}
+
+.control--checkbox .control__indicator:after {
+  left: 5px;
+  top: 0px;
+  width: 6px;
+  height: 10px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.control--radio {
+  .control__indicator{
+    border-radius: 50%;
+    &:after{
+      left: calc(50% - 6px);
+      top:calc(50% - 6px);
+      height: 12px;
+      width: 12px;
+      border-radius: 50%;
+      background: #4EB5A5;
+    }
+  }
+  input:checked~.control__indicator{
+    background-color: #fff;
+  } 
+  
+  input:checked~.control__indicator:after {
+    display: block !important;
+    background: #4EB5A5;
+  }
+  input:disabled~.control__indicator:after {
+    background-color: #4EB5A5;
+    cursor: no-drop;
+  }
+  input:disabled:checked~.control__indicator{
+    display: block;
+  }
+  input:disabled:checked~.control__indicator:after{
+    display: block;
+    background-color: #4EB5A5;
+  }
+}
+
 // select
 .txn-input-select {
   display: flex;
@@ -143,19 +243,25 @@ td{
 
       li {
         position: relative;
-        border: 1px solid #007B81;
+        border: 1px solid #4EB5A5;
         padding: 6px 25px 6px 10px;
         border-radius: 6px;
         margin: 2.5px 6px 2.5px 0;
-
+        p{
+          font-size: 15px;
+          line-height: 1.1;
+        }
         span {
           position: absolute;
           right: 0;
+          z-index: 1;
+          &:hover{
+            opacity: .8;
+          }
         }
       }
     }
   }
-
   .checkbox-group {
     position: absolute;
     top: 40px;
@@ -168,66 +274,14 @@ td{
     width: 100%;
     max-height: 244px;
     overflow-y: auto;
-    z-index: 1;
-
-    .control {
-      padding: 12px 10px;
-      display: block;
-      position: relative;
+    z-index: 2;
+    .control{
       padding-left: 40px;
-      font-size: 16px;
-      color: #6F6F6F;
       border-bottom: 1px solid #E1E1E1;
-      cursor: pointer;
-
-      input {
-        position: absolute;
-        z-index: -1;
-        opacity: 0;
-
-        &:disabled~.control__indicator {
-          background: #e6e6e6;
-          opacity: 0.6;
-          pointer-events: none;
-        }
-
-        &:checked~.control__indicator {
-          background: #4EB5A5;
-          border-color: #4EB5A5;
-
-          &:after {
-            display: block;
-          }
-        }
-      }
     }
-
-    .control__indicator {
-      position: absolute;
-      top: 10px;
-      left: 12px;
-      height: 20px;
-      width: 20px;
-      border-radius: 4px;
-      border: 2px solid #A2A2A2;
-
-      &::after {
-        content: '';
-        position: absolute;
-        display: none;
-      }
+    .control__indicator{
+      left: 10px;
     }
-
-    .control--checkbox .control__indicator:after {
-      left: 5px;
-      top: 0px;
-      width: 6px;
-      height: 10px;
-      border: solid #fff;
-      border-width: 0 2px 2px 0;
-      transform: rotate(45deg);
-    }
-
   }
 }
 // textare
@@ -338,6 +392,14 @@ td{
           position: relative;
           flex: 50%;
         }
+        .glyphicon{
+          width: 18px;
+          margin-right: 12px;
+          opacity: .5;
+          &:hover{
+            opacity: 1;
+          }
+        }
       }
   
       .txn-input-select {
@@ -380,6 +442,7 @@ td{
         text-align: right;
       }
       .btn-ss-line{
+        cursor: pointer;
         color: #4EB5A5;
         border-radius: 6px;
         margin: 0 5px;
@@ -387,9 +450,14 @@ td{
         padding: 4px 10px;
         background-color: #EFFFFE;
         border: #C9EBE9 solid 1px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        &:hover{
+          border-color: #4EB5A5;
+          color: #24a09a;
+        }
       }
       .f-ss-note{
-        font-size: 12px;
+        font-size: 13px;
         line-height: 1.2;
         font-weight: bold;
         padding-left: 5px;
@@ -398,12 +466,35 @@ td{
           
         }
       }
+      .txn-checkbox, .txn-radio{
+        padding-right: 12px;
+      }
+      .flex-no-w{
+        flex: initial;
+        max-width: initial;
+        padding-right: 18px;
+      }
     }
   
     .top-line {
       border-top: 1px solid #e1e1e1;
     }
-  
+    .w-m-120{
+      max-width: 120px;
+      margin-right: 10px;
+    }
+    .w-m-240{
+      max-width: 220px;
+      margin-right: 10px;
+    }
+    .bg-w {
+      background-color: #fff;
+      border-radius: 6px;
+      input{
+        padding: 0 10px;
+        color: #6F6F6F;
+      }
+    }
     .bg-gary {
       background-color: #e1e4e7;
       border-radius: 6px;
@@ -412,7 +503,6 @@ td{
         color: #959595;
       }
     }
-  
     .both-d {
   
       .txn-input-select,
@@ -529,11 +619,11 @@ div.date-picker-dash {
 }
 
 .form-control {
-  height: 28px;
+  height: 30px;
 }
 
 .form-select {
-  height: 28px;
+  height: 30px;
 }
 
 // page
@@ -1080,28 +1170,75 @@ div.date-picker-dash {
   .main-category {
     width: 100%;
     padding: 5px 0;
-
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: start;
+    
     h4.top-title {
       color: #007B81;
       font-size: 17px;
       font-weight: bold;
       line-height: 1.2;
+      padding-right: 15px;
     }
   }
   .subtitle-category{
     padding: 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: start;
+    margin-top: 15px;
     p{
       font-size: 16px;
       line-height: 1.2;
       font-weight: bold;
       color: #333333;
+      padding-right: 15px;
     }
+  }
+  .category-info-toggle{
+    width: 100%;
+    border-bottom: 2px solid #4EB5A5;
+    p{
+      background-color: #4EB5A5;
+      color: #fff;
+      font-weight: bold;
+      display: inline-block;
+      padding: 10px 45px 10px 20px;
+      border-radius: 4px 4px 0 0;
+      position: relative;
+      &::after{
+        content: "";
+        position: absolute;
+        width: 16px;
+        height: 9px;
+        display: block;
+        top: calc(50% - 4.5px);
+        right: 15px;
+        background: url(../images/icon/arr-up-w.svg) center center no-repeat;
+        background-size: contain;
+      }
+      &.arr-open::after{
+        -moz-transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        -o-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        transform: rotate(180deg);
+      }
+    }
+    cursor: pointer;
   }
   .classification{
     border:1px solid #E1E4E7 ;
     position: relative;
-    padding: 10px 20px;
-    margin-bottom: 10px;
+    padding: 0px 20px;
+    margin:5px 0 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: start;
     &::before{
       content: "";
       position: absolute;
@@ -1112,9 +1249,42 @@ div.date-picker-dash {
       top: 0;
     }
     p{
+      padding: 8px 0;
       font-size: 16px;
+      line-height: 1.5;
       font-weight: bold;
       color: #848484;
+      padding-right: 15px;
     }
+  }
+  .bg-w-border-box{
+    border: 2.5px solid #E1E4E7;
+    border-radius: 4px;
+    margin-bottom: 25px;
+    .form_row {
+      margin-bottom: 0;
+      .rowCont {
+        .form_group{
+          border-width: 0 0 1px 0;
+          background-color: #fff;
+          border-radius: 0;
+        }
+        .r_line::after{
+          height: calc(100% + 11px);
+        }
+        .bg-w{ 
+          border: solid 2px #E1E1E1;
+        }
+      }
+      &:last-child .rowCont .form_group{
+        border: none;
+      }
+    }
+  }
+  .b-c-green{
+    border-color: #4EB5A5;
+    border-width: 0 2px 2px 2px;
+    border-radius: 0 0px 4px 4px;
+    overflow: hidden;
   }
 }
