--- a/iiot/TTPush-walk/css/style.css
+++ b/iiot/TTPush-walk/css/style.css
@@ -993,4 +993,102 @@ body {
   font-size: 12px;
   color: #333;
 }
+
+.popup_cont {
+  width: 100%;
+  height: 100vh;
+  background-color: #00000040;
+  position: fixed;
+  z-index: 20;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.popup_cont .block-box {
+  position: relative;
+  width: 100%;
+  max-width: 260px;
+  min-height: 150px;
+  border-radius: 12px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  padding: 15px 20px;
+}
+
+.popup_cont .block-box a.closed {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  display: block;
+  top: -2px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 25%;
+  right: 0px;
+  background-image: url(../images/closed.svg);
+}
+
+.popup_cont .block-box a.closed:hover {
+  opacity: .8;
+}
+
+.popup_cont .block-box .main-title {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 12px 0;
+  color: #333333;
+}
+
+.popup_cont .block-box .text {
+  text-align: center;
+  font-size: 13px;
+  color: #888888;
+}
+
+.popup_cont .block-box .btn {
+  text-align: center;
+  padding: 15px 0 5px 0;
+}
+
+.popup_cont .block-box .btn .pink-btn {
+  min-width: 124px;
+  background-color: #E85189;
+  border-radius: 50px;
+  display: inline-block;
+  padding: 7px 12px;
+  margin: 3px 0;
+}
+
+.popup_cont .block-box .btn .pink-btn p {
+  font-size: 14px;
+  color: #fff;
+  padding-top: 2.5px;
+  line-height: 1.5;
+}
+
+.popup_cont .block-box .btn .pink-btn:hover {
+  background-color: #db437b;
+}
+
+.popup_cont .block-box .btn .pink-line-btn {
+  border: 1px solid #db437b;
+  background: transparent;
+}
+
+.popup_cont .block-box .btn .pink-line-btn p {
+  color: #db437b;
+}
+
+.popup_cont .block-box .btn .pink-line-btn:hover {
+  background-color: #ffeef5;
+}
 /*# sourceMappingURL=style.css.map */
