--- a/iiot/TTPush-walk/css/style.scss
+++ b/iiot/TTPush-walk/css/style.scss
@@ -646,4 +646,87 @@ body{
     color: #333;
   }
 }
+
+
+.popup_cont {
+  width: 100%;
+  height: 100vh;
+  background-color: #00000040;
+  position: fixed;
+  z-index: 20;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  .block-box{
+    position: relative;
+    width: 100%;
+    max-width: 260px;
+    min-height: 150px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .2);
+    padding: 15px 20px;
+    a.closed{
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      display: block;
+      top:-2px;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: 25%;
+      right: 0px;
+      background-image: url(../images/closed.svg);
+      &:hover{
+        opacity: .8;
+      }
+    }
+    .main-title {
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      padding: 12px 0;
+      color: #333333;
+    }
+    .text{
+      text-align: center;
+      font-size: 13px;
+      color: #888888;
+    }
+    .btn{
+      text-align: center;
+      padding: 15px 0 5px 0;
+      .pink-btn{
+        min-width: 124px;
+        background-color: #E85189;
+        border-radius: 50px;
+        display: inline-block;
+        padding:7px 12px;
+        margin:3px 0;
+        p{
+          font-size: 14px;
+          color: #fff;
+          padding-top: 2.5px;
+          line-height: 1.5;
+        }
+        &:hover{
+          background-color: #db437b;
+        }
+      }
+      .pink-line-btn{
+        border: 1px solid #db437b;
+        background: transparent;
+        p{
+          color: #db437b;
+        }
+        &:hover{
+          background-color: #ffeef5;
+        }
+      }
+    }
+  }
+}
 @media all and (max-width: 700px) {}
