--- a/CTBC-0716/css/style.css
+++ b/CTBC-0716/css/style.css
@@ -32,6 +32,8 @@ main.wrapper{ width: 100%; padding: 15px; }
 .wrapper .top_info .f_size_b{ font-size: 32px; }
 
 .wrapper .pay_item p.sub_title{ text-align: center; padding: 20px; font-size: 20px; font-weight: bold; }
+.wrapper .pay_item p.note{ text-align: center; padding:0 0 20px; color: #888; font-size: 16px; }
+
 .wrapper .pay_item .pay_list{ padding: 0 15px; max-width: 874px; margin: 0 auto; text-align: center; }
 .wrapper .pay_item .pay_list li{  display: inline-block; vertical-align: text-top; margin:5px 3px; }
 .wrapper .pay_item .pay_list li a{display: block; width: 200px; height: 104px; overflow: hidden; border: 2.5px solid #D0D1D1; border-radius: 6px;display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
@@ -53,6 +55,19 @@ main.wrapper{ width: 100%; padding: 15px; }
 .wrapper p.copyright{ font-size: 12px; color: #666666; text-align: center; padding:20px 0; }
 .wrapper p.copyright span{ padding: 0 15px; }
 
+.wrapper .pay_item p.title_result{ text-align: center; padding:70px 0 10px 0; font-size: 20px; font-weight: bold; position: relative; margin-top: 30px;}
+.wrapper .pay_item p.title_result::after{ content: ""; position: absolute; width: 60px; height: 60px; display: block; left: calc(50% - 30px); top: 0; background: url(../images/circle_done.svg) center center no-repeat; background-size: contain;}
+.wrapper .pay_item p.icon_error::after{ background: url(../images/circle-xmark.svg) center center no-repeat; background-size: contain;}
+.table_pay_list { width: 100%; max-width: 600px; padding: 0 20px 50px 20px; margin:0 auto;}
+.table_pay_list table{ width: 100%; border: 1px solid #DEE2E6; border-width: 1px 1px 0 1px;}
+.table_pay_list table tr th,
+.table_pay_list table tr td { border-bottom: 1px solid #DEE2E6;	padding: 15px 10px;	font-size: 14px; color: #666; vertical-align: middle;}
+.table_pay_list table .left_title { width: 40%; background-color: #EDF6F6; text-align: center;	min-width: 120px;}
+.table_pay_list table tr td {	padding-left: 25px;}
+.wrapper .p_red { color: #FF5441; font-weight: bold;}
+.wrapper .p_green {color: #24A09A; font-weight: bold;}
+.wrapper .p_ss{ padding-left: 5px; font-size: 13px; font-weight: normal;}
+
 /*==== RWD ====*/
 
 @media (max-height:800px) {
@@ -70,8 +85,10 @@ main.wrapper{ width: 100%; padding: 15px; }
 	.wrapper .top_info p{ font-size: 18px; line-height: inherit; padding-top: 10px; }
 	.wrapper .top_info .f_size_b{ font-size: 28px; }
 	.wrapper .top_info .logo{ width: 206px; height: 59px;}
+	.wrapper .bot_border{ border-bottom: 1px solid #B2B2B2; padding-bottom: 20px;}
 	.wrapper .the_btn{ padding: 20px 0; }
 	.wrapper .pay_item p.sub_title{ font-size: 14px; padding: 5px 0 20px;background: rgb(255,255,255);background: -moz-linear-gradient(top,  rgba(255,255,255,1) 52%, rgba(240,237,237,1) 100%);	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 52%,rgba(240,237,237,1) 100%);	background: linear-gradient(to bottom,  rgba(255,255,255,1) 52%,rgba(240,237,237,1) 100%);	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0eded',GradientType=0 );}
+	.wrapper .pay_item p.title_result{ font-size: 18px;}
 	.wrapper .pay_item .pay_list{ height: 45vh; overflow-y: auto; padding: 10px ;}
 	.wrapper .pay_item .pay_list li a{ width: 144px; height: 72px; border-width: 2px; }
 	.wrapper .pay_item .pay_list li a img{ max-width: 69%; }
