--- a/jay/tc/css/style.css
+++ b/jay/tc/css/style.css
@@ -1174,6 +1174,42 @@ a.go_top {
   padding-right: 15px;
 }
 
+.main-wrapper .contact-form .form-contents .field .the_select {
+  width: 100%;
+  padding: 5px 0px;
+  position: relative;
+}
+
+.main-wrapper .contact-form .form-contents .field .the_select select {
+  width: 100%;
+  border: #E0E0E0 1px solid;
+  padding: 9px 12px;
+  line-height: 1.5;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 0.01px;
+  text-overflow: ' ';
+}
+
+.main-wrapper .contact-form .form-contents .field .the_select select::-ms-expand {
+  display: none;
+}
+
+.main-wrapper .contact-form .form-contents .field .the_select::after {
+  content: "\f107";
+  position: absolute;
+  top: calc(50% - 8px);
+  color: #555;
+  right: 15px;
+  display: inline-block;
+  font-family: Font Awesome\ 5 Free;
+  font-size: inherit;
+  text-rendering: auto;
+  font-weight: 900;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .main-wrapper .contact-form .form-contents .field .confirm {
   width: 100%;
   padding: 10px 0;
@@ -1210,6 +1246,51 @@ a.go_top {
 
 .main-wrapper .contact-form .form-contents .field .confirm li p a:hover {
   text-decoration: none;
+}
+
+.main-wrapper .contact-form .form-contents .field-both {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.main-wrapper .contact-form .form-contents .field-both .a___field {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 5px;
+}
+
+.main-wrapper .contact-form .form-contents .field-both .a___field:last-child {
+  margin-left: auto;
+  margin-right: 0;
+  padding-left: 5px;
+}
+
+.main-wrapper .contact-form .form-contents .field-both .bg-border {
+  line-height: 1.5;
+  border: #E0E0E0 1px solid;
+  background-color: #fff;
+  margin: 5px 0;
+  padding: 6px 12px;
+}
+
+@media (max-width: 768px) {
+  .main-wrapper .contact-form .form-contents .field-both {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-wrapper .contact-form .form-contents .field-both .a___field {
+    margin-right: 0;
+  }
+  .main-wrapper .contact-form .form-contents .field-both .a___field:last-child {
+    margin: 0;
+    padding-left: 0;
+  }
 }
 
 @media (max-width: 768px) {
