--- a/jay/tc/css/style.scss
+++ b/jay/tc/css/style.scss
@@ -1019,6 +1019,38 @@ a.go_top {
             padding-right: 15px;
           }
         }
+        .the_select{
+          width: 100%;
+          padding: 5px 0px;
+          position: relative;
+          select{
+            width: 100%;
+            border: #E0E0E0 1px solid;
+            padding: 9px 12px;
+            line-height: 1.5;
+            -webkit-appearance: none; 
+            -moz-appearance: none; 
+            text-indent: 0.01px; 
+            text-overflow: ' ';
+            &::-ms-expand {
+              display: none;
+            }
+          }
+          &::after {
+            content: "\f107";
+            position: absolute;
+            top:calc(50% - 8px);
+            color: #555;
+            right: 15px;
+            display: inline-block;
+            font-family: Font Awesome\ 5 Free;
+            font-size: inherit;
+            text-rendering: auto;
+            font-weight: 900;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+          }
+        }
         .confirm{
           width: 100%;
           padding: 10px 0;
@@ -1044,6 +1076,36 @@ a.go_top {
                   text-decoration: none;
                 }
               }
+            }
+          }
+        }
+      }
+      .field-both{
+        display: flex;
+        flex-wrap: wrap;
+        .a___field{
+          flex: 1;
+          margin-right: 5px;
+          &:last-child{
+            margin-left: auto;
+            margin-right:0;
+            padding-left: 5px;
+          }
+        }
+        .bg-border{
+          line-height: 1.5;
+          border: #E0E0E0 1px solid;
+          background-color: #fff;
+          margin: 5px 0;
+          padding: 6px 12px
+        }
+        @media (max-width: 768px) {
+          flex-direction: column;
+          .a___field{
+            margin-right: 0;
+            &:last-child {
+              margin: 0;
+              padding-left: 0;
             }
           }
         }
